--- a/Express_BackEnd/package.json
+++ b/Express_BackEnd/package.json
@@ -7,11 +7,13 @@
     "test": "jasmine"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "mongoose": "^5.4.17",
-    "request": "^2.88.2"
+    "body-parser": "1.18.3",
+    "cors": "2.8.4",
+    "debug": "2.6.9",
+    "dotenv": "16.5.0",
+    "express": "4.16.0",
+    "mongodb": "6.16.0",
+    "mongoose": "8.14.0",
+    "request": "2.88.2"
   }
 }
